--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,43 @@
+/* || Default */
 * {
     margin: 0;
     padding: 0;
     font-family: 'Merriweather', serif;
 }
+/* scroll */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+/* || Javascript */
 .hidden {
     display: none;
 }
 
+/* || Header */
 header {
     display: block;
     text-align: center;
 }
-h1 {
-    font-size: 50px;
-}
 
+h1 {font-size: 5vw;}
+
+/* || Main */
 main {
     display: flex;
     flex-direction: column;
@@ -43,6 +66,7 @@ main {
     width: 25%;
     margin: 25px auto;
 }
+
 button {
     width: 100%;
     background: black;
@@ -52,29 +76,29 @@ button {
     padding: 10px;
     cursor: pointer;
 }
-button:focus {
-    outline: none;
-}
+button:focus {outline: none;}
 
-.roll-history-wrapper {
-    text-align: center;
-}
+.roll-history-wrapper {text-align: center;}
+
 .roll-history-wrapper h2 {
     border-bottom: thin solid black;
     width: 15%;
     margin: 20px auto
 }
+
 #roll-history {
     overflow-y: scroll;
-    width: 15%;
+    width: 25%;
     height: 200px;
     margin: 0 auto;
+    border: thin solid black;
 }
 #roll-history li {
     border-bottom: thin solid black;
     padding: 5px;
 }
 
+/* || Footer */
 footer {
     position: absolute;
     bottom: 0;
@@ -82,4 +106,45 @@ footer {
     padding: 10px;
     background: black;
     color: white;
+}
+
+/* || Media Queries */
+@media screen and (min-width: 2560px) {
+    /* || Header */
+    header p {font-size: 1vw;}
+
+    /* || Main */
+    main {display: block;}
+
+    #dice-container {width: 25%;}
+    
+    #dice-1,
+    #dice-2 {
+        width: 25%;
+        margin: 10px 77px;
+    }
+    
+    .total-wrapper {
+        font-size: 0.9vw;
+        margin: 25px auto;
+    }
+
+    button {
+        margin: 30px auto;
+        padding: 30px;
+        cursor: pointer;
+        font-size: 1.5vw;
+    }
+    .roll-history-wrapper h2 {
+        width: 25%;
+        border: none;
+    }
+    #roll-history {
+        width: 25%;
+        height: 400px;
+        border: thin solid black;
+    }
+    #roll-history li {font-size: 0.9vw;}
+    
+    
 }
